SFML Menu deleted

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,6 @@ project(the_ark)
 
 set(CMAKE_CXX_STANDARD 17)
 
-if (WIN32)
-    set(SFML_DIR ../SFML-2.5.1/lib/cmake/SFML)
-endif()
-
-find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
-
 add_executable(the_ark
         main.cpp
         TheArk.h
@@ -23,6 +17,4 @@ add_executable(the_ark
         Population.cpp
         Resources.cpp
         Human.cpp
-        Enums.cpp
-        menu.cpp)
-target_link_libraries(the_ark sfml-graphics sfml-audio)
+        Enums.cpp)
