Add new parameters in config (propotions of people)

--- a/test_000.cfg
+++ b/test_000.cfg
@@ -10,18 +10,24 @@ Services
 
     Technical
         State 90
+        Propotion_of_people 0.2
 
     Biological
         State 90
+        Propotion_of_people 0.2
 
     Medical
         State 90
+        Propotion_of_people 0.3
 
     Navigation
         State 90
+        Propotion_of_people 0.05
 
     Emergency
         State 90
+        Propotion_of_people 0.05
 
     Social
         State 90
+        Propotion_of_people 0.2
