added parameters to cfg file

--- a/test_000.cfg
+++ b/test_000.cfg
@@ -3,6 +3,8 @@ General
     Years 100
     Population 2000
     Resources 20000
+    Proportion_of_not_organic_resources 0.5
+    Proportion_of_components 0.5
     Output test_000
 
 
