--- a/test_000.cfg
+++ b/test_000.cfg
@@ -13,6 +13,9 @@ Services
     Technical
         State 90
         Propotion_of_people 0.2
+        Critical_state 15
+        Amount_of_junk_after_components 1
+        Resources_per_percent 100
 
     Biological
         State 90
