--- a/test_000.cfg
+++ b/test_000.cfg
@@ -2,6 +2,8 @@ General
 
     Years 100
     Population 2000
+    Children 0.15
+    Old 0.15
     Resources 20000
     Proportion_of_not_organic_resources 0.5
     Proportion_of_components 0.5
