New coeficient for ES added to cfg

--- a/test_000.cfg
+++ b/test_000.cfg
@@ -36,6 +36,7 @@ Services
     Emergency
         State 90
         Propotion_of_people 0.05
+        EFFECTIVE_STATE_RATIO 0.4
 
     Social
         State 90
