New coefficients for NS added to cfg

--- a/test_000.cfg
+++ b/test_000.cfg
@@ -32,6 +32,9 @@ Services
     Navigation
         State 90
         Propotion_of_people 0.05
+        ANNUAL_DEGRADATION -2
+        LOST_THE_WAY_WARNING 3
+        REPAIR_PERCENT_PER_YEAR 20
 
     Emergency
         State 90
