Upd of Medical Service: process_accident() is implemented, some parameters moved to config

--- a/test_000.cfg
+++ b/test_000.cfg
@@ -28,6 +28,12 @@ Services
     Medical
         State 90
         Propotion_of_people 0.3
+        Birth_rate 0.025
+        Death_rate_children 0.001
+        Death_rate_adults 0.001
+        Death_rate_old 0.01
+        Retirement_age 65
+        Resources_per_health 10
 
     Navigation
         State 90
