--- a/test_000.cfg
+++ b/test_000.cfg
@@ -41,6 +41,7 @@ Services
         ANNUAL_DEGRADATION -2
         LOST_THE_WAY_WARNING 3
         REPAIR_PERCENT_PER_YEAR 20
+        MINIMAL_FLIGHT_TIME 90
 
     Emergency
         State 90
