--- a/test_000.cfg
+++ b/test_000.cfg
@@ -47,6 +47,8 @@ Services
         State 90
         Propotion_of_people 0.05
         EFFECTIVE_STATE_RATIO 0.4
+        REPAIR_PERCENT_PER_YEAR 10
+        ANNUAL_DEGRADATION -2
 
     Social
         State 90
