Fixed segfault and expanding the config file

--- a/test_000.cfg
+++ b/test_000.cfg
@@ -2,7 +2,7 @@ General
 
     Debug_Output 0
     Show_Errors 0
-    Years 40
+    Years 400
     Population 20000
     Children 0.15
     Old 0.15
@@ -54,3 +54,4 @@ Services
         State 99
         Propotion_of_people 0.1
         Border_to_be_ill 70
+        Suicide_border 5
