Updating of social service

--- a/test_000.cfg
+++ b/test_000.cfg
@@ -55,3 +55,6 @@ Services
         Propotion_of_people 0.1
         Border_to_be_ill 70
         Suicide_border 5
+        Efficiency_of_a_doctor 20
+        Year_thread 10
+        Amount_of_drugs_for_one_person 1
