--- a/test_000.cfg
+++ b/test_000.cfg
@@ -1,8 +1,8 @@
 General
 
     Debug_Output 0
-    Show_Errors 0
-    Years 400
+    Show_Errors 1
+    Distance 100
     Population 20000
     Children 0.15
     Old 0.15
@@ -39,16 +39,19 @@ Services
         State 90
         Propotion_of_people 0.05
         ANNUAL_DEGRADATION -2
+        REPAIR_PERCENT_PER_YEAR 30
         LOST_THE_WAY_WARNING 3
-        REPAIR_PERCENT_PER_YEAR 20
         MINIMAL_FLIGHT_TIME 90
+        ACCELERATION_TIME 3
+        MANEUVERING_DAMAGE_RATIO 2
 
     Emergency
         State 90
         Propotion_of_people 0.05
-        EFFECTIVE_STATE_RATIO 0.4
-        REPAIR_PERCENT_PER_YEAR 10
-        ANNUAL_DEGRADATION -2
+        EFFECTIVE_STATE_RATIO 0.5
+        REPAIR_PERCENT_PER_YEAR 20
+        ANNUAL_DEGRADATION -1
+        MAX_FLIGHT_STAGE_ADJUSTMENT 0.05
 
     Social
         State 99
