Updating Social Service

--- a/test_000.cfg
+++ b/test_000.cfg
@@ -56,8 +56,10 @@ Services
     Social
         State 99
         Propotion_of_people 0.1
-        Border_to_be_ill 70
-        Suicide_border 5
-        Efficiency_of_a_doctor 20
+        Border_to_be_ill 50
+        Suicide_border 0
+        Starting_Efficiency_of_a_doctor 10
         Year_thread 10
         Amount_of_drugs_for_one_person 1
+        Starting_border_Children_to_Adults 18
+        Maximum_border_Children_to_Adults 18
