--- a/test_000.cfg
+++ b/test_000.cfg
@@ -63,3 +63,4 @@ Services
         Amount_of_drugs_for_one_person 1
         Starting_border_Children_to_Adults 18
         Maximum_border_Children_to_Adults 18
+        Minimum_border_Children_to_Adults 10
